--- a/website/assets/style/style.css
+++ b/website/assets/style/style.css
@@ -5,24 +5,31 @@
 
   padding: 0;
   margin: 0;
-
+  font-family: 'Roboto', sans-serif;
 }
 
 
 .slide-container {
   color: white;
-  heigt: 100vh;
+  position: relative;
+  height: 100vh;
 }
 
 .slide-text-container {
-  
+  position: absolute;  
   color: white;
   z-index: 19;
+  top: 50%;
+  left: 10%;
+  transform: translate(-10%, -50%);
+}
 
+.title {
+  font-size: 40px;
 }
 
 .slide-shadow {
-     width: 100vw;
+    width: 100vw;
     height: 100vh;
     position: absolute;
     top: 0;
@@ -34,10 +41,15 @@
   width: 100vw;
   height: 100vh;
   object-fit: cover;
-  position: fixed;
+  /*position: fixed;*/
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   z-index: -1;
+}
+
+.news-letter {
+  height: 100vh;
+  background: white;
 }
